Anchors fixed, overflow hidden added.

--- a/style-source/section-growth.less
+++ b/style-source/section-growth.less
@@ -5,17 +5,28 @@
 .section {
   &-growth {
     position: relative;
-    padding: 50px 0;
-    margin-top: 19px;
-    &::before {
-      content: '';
+    padding: 130px 0;
+    margin-bottom: -80px;
+    .decorative {
       position: absolute;
-      left: 50%;
       top: 50%;
-      transform: translate(-50%, -50%);
-      width: image-width("@{image_path_pre}/background-parallelogram-03.svg");
+      left: 0;
+      right: 0;
+      bottom: 0;
+      transform: translateY(-50%);
+      width: 100%;
       height: image-height("@{image_path_pre}/background-parallelogram-03.svg");
-      background: url("@{image_path_post}/background-parallelogram-03.svg") center no-repeat;
+      overflow: hidden;
+      &::before {
+        content: '';
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: image-width("@{image_path_pre}/background-parallelogram-03.svg");
+        height: image-height("@{image_path_pre}/background-parallelogram-03.svg");
+        background: url("@{image_path_post}/background-parallelogram-03.svg") center no-repeat;
+      }
     }
     .wrapper {
       display: flex;
