--- a/style-source/section-steps.less
+++ b/style-source/section-steps.less
@@ -5,8 +5,8 @@
 .section {
   &-steps {
     position: relative;
-    padding: 70px 0;
-    margin-top: 38px;
+    padding: 120px 0;
+    margin-bottom: -12px;
     .wrapper {
       &-second {
         position: relative;
@@ -184,7 +184,7 @@
         .title {
           top: -110px;
           left: -25px;
-          transform: translate(-50%, -100%) scaleX(.7) skewY(-16deg);
+          transform: translate(-50%, -100%) scaleX(.7) skewY(-14deg);
         }
         &::before {
           content: '';
